fixed scrollbar

--- a/project_1/Exercise3/style/style.css
+++ b/project_1/Exercise3/style/style.css
@@ -14,6 +14,7 @@ body {
     font-family: 'Rubik', sans-serif;
     margin: 0px;/*gia na min exei keno gyro gyro*/
     background-color: #e4f1fe;
+    overflow-x: hidden;
 }
 
 /*class gia to menu*/
